API clean up
